test/typecheck/bad-select-value1.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    i32.const 0
    i64.const 0
    f32.const 0
    select
    drop))
(;; STDERR ;;;
out/test/typecheck/bad-select-value1.txt:8:5: error: type mismatch in select, expected [i64, i64, i32] but got [i32, i64, f32]
    select
    ^^^^^^
out/test/typecheck/bad-select-value1.txt:8:5: error: type mismatch in function, expected [] but got [i64]
    select
    ^^^^^^
;;; STDERR ;;)
